# uploadpicker

./: .env.example  .gitignore  Build Install EXE.bat  Create Code Sign Cert.bat  Install UploadPicker.bat  README.md  Sign Install EXE.bat  Start UploadPicker.bat  Trust Code Sign Cert.bat  Uninstall UploadPicker.bat  Update UploadPicker.bat  UploadPicker.bat  pyproject.toml
app/: config.py  db.py  main.py  models.py  runner.py  schemas.py
app/services/: captions.py  detectors.py  embedding.py  faces.py  faiss_store.py  indexing.py  library.py  search.py  storage.py  updater.py
app/static/: app.css
app/templates/: base.html  home.html  index.html
installer/: LaunchUploadPicker.ps1  UploadPickerWizard.ps1  build_install_exe.ps1  create_self_signed_code_sign_cert.ps1  install_wizard.py  sign_install_exe.ps1  trust_self_signed_cert.ps1  update_from_github.ps1
